# action-recognition-hmdb51

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  data.dvc  index_to_class.json  pyproject.toml  video_action_model2.onnx
.dvc/: config
action_recognition/: train.py  train_ml_flow.py  train_ml_flow_dvc.py  train_ml_flow_dvc_2.py  train_ml_flow_server_dvc.py
action_recognition/pl_modules/: data.py  infer.py  infer_from_onnx.py  infer_ml_flow.py  model.py  train_old.py
action_recognition/scratch/: data.py  model.py  preprocessing.py  train_scratch.py  utils.py  waste.py
conf/: config.yaml
conf/download_data/: download_data.yaml
conf/export/: export.yaml
conf/inference/: inference.yaml
conf/mlflow/: mlflow.yaml
conf/model/: model.yaml
conf/training/: training.yaml
outputs/2025-05-26/23-35-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-26/23-42-16/.hydra/: hydra.yaml
outputs/2025-05-27/01-17-06/.hydra/: hydra.yaml
outputs/2025-05-27/01-20-33/.hydra/: hydra.yaml
outputs/2025-05-27/01-22-27/.hydra/: hydra.yaml
outputs/2025-05-27/01-24-31/.hydra/: hydra.yaml
outputs/2025-05-27/01-26-25/.hydra/: hydra.yaml
outputs/2025-05-27/22-14-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-27/22-16-24/.hydra/: hydra.yaml
outputs/2025-05-27/22-19-55/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-27/22-21-14/.hydra/: hydra.yaml
outputs/2025-05-27/22-22-46/.hydra/: hydra.yaml
scripts/: convert_to_trt.py  download_data.py  download_data_old.py  dvc_helper.py  export_to_onnx.py  index_to_class.py
(+82 files in other folders)
